--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="row">
             <div class="col-lg-6 align-self-center">
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <h2 style="color: rgb(226, 43, 67);">Welcome  To<em style="color: rgb(226, 43, 217);">YUVAA</em>  World</h2>
+                <h2 style="color: rgb(226, 43, 67);">Welcome  To<em style="color: rgb(226, 43, 217);"> YUGAA</em>  World</h2>
 
               </div>
             </div>
@@ -96,7 +96,7 @@
 
 
 
-  <div id="services" class="our-services section">
+  <div id="about" class="our-services section">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 align-self-center  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
@@ -142,7 +142,7 @@
 
 
 
-  <div id="about" class="about-us section">
+  <div id="services" class="about-us section">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -159,8 +159,9 @@
                     <img src="assets/images/service-icon-01.png" alt="reporting">
                   </div>
                   <div class="right-text">
-                    <h4>Web Development</h4>
-                    <p>We develop all types of websites like Company Website,Journals</p>
+                    <h4>Web/App Development</h4>
+                    <p>Graphic elements are most important in website,Our responsive websites will adjust itself based on user’s screen, Speed is an important aspect to be considered when designing a website.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -170,8 +171,8 @@
                     <img src="assets/images/service-icon-02.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>App Development</h4>
-                    <p>We Providing the Ecommerce Solutions</p>
+                    <h4>Digital Marketing</h4>
+                    <p>We create digital marketing and online marketing campaigns for your business and your brand to improve the conversion of traffic into more leads and sales.  We will assist you to rank well organically and through paid for advertising.</p>
                   </div>
                 </div>
               </div>
@@ -182,7 +183,7 @@
                   </div>
                   <div class="right-text">
                     <h4>Python</h4>
-                    <p>We Providing the Ecommerce Solutions.</p>
+                    <p>We build Chatbot to make your living websites to communicate to your customers interactively.</p>
                   </div>
                 </div>
               </div>
@@ -193,7 +194,7 @@
                   </div>
                   <div class="right-text">
                     <h4>Data Science</h4>
-                    <p>We Providing the Ecommerce Solutions.</p>
+                    <p>Turn data into strategies to action to profits enable strategic,operational and tactical decision making</p>
                   </div>
                 </div>
               </div>
@@ -279,9 +280,12 @@
         <div class="col-lg-6 align-self-center wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.25s">
           <div class="section-heading">
             <h2>Feel Free To Send Us a Message About Your Website Needs</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doer ket eismod tempor incididunt ut labore et dolores</p>
+            <p>  we don’t only do web design and development. We have a track record of combining business strategies, creative designand marketing, and technical expertise to deliver top notch web solutions to you. 
+              We take the time to research and understand your business 
+              We own all of the source code and give you training if you want to manage it yourself
+              We like to take pride in the fact that we are able to offer you the full package when it comes to your online experience.</p>
             <div class="phone-info">
-              <h4>For any enquiry, Call Us: <span><i class="fa fa-phone"></i> <a href="#">100</a></span></h4>
+              <h4>For any enquiry, Call Us: <span><i class="fa fa-phone"></i> <a href="#">+91 90474 53537</a></span></h4>
             </div>
           </div>
         </div>
